--- a/views/include/nav.jade
+++ b/views/include/nav.jade
@@ -1,6 +1,6 @@
 //
    Created by itdwyy on 12/2/2016.
-.nav
+.nav.zindexthetop
     .wrapper-960
         a.nav-logo.cp-logo
         a(href='#').icon-group-h.right
@@ -9,7 +9,7 @@
             input#telSearch.search
             #telResult.autoSearchList.nav-searchList.z-depth-2
             i.material-icons.search-icon &#xE8B6;
-.nav-list-h.second-nav.clear.clearfix
+.nav-list-h.second-nav.clear.clearfix.zindexsecond
     ul.wrapper-960.none-padding
         -
             var departments = ['General Affairs(GAD)','Commercial(COM)','Finance(FIN)','Flight Operations(FLT)'];
