--- a/public/stylesheets/components/slideimgs.scss
+++ b/public/stylesheets/components/slideimgs.scss
@@ -16,3 +16,18 @@
     }
   }
 }
+
+
+.slide-show-container-h {
+  @include relativeblock;
+  @include clearfix;
+  .slide-item {
+    position: relative;
+    text-decoration: none;
+    @include float-block;
+    .img,img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
