--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2049,6 +2049,18 @@ body {
   transition: box-shadow .25s;
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 
+.zindexthetop {
+  z-index: 1000; }
+
+.zindexsecond {
+  z-index: 500; }
+
+.zindexnormal {
+  z-index: 100; }
+
+.second-backgrond-color {
+  background-color: #f5f5f5; }
+
 .nav {
   position: relative;
   display: block;
@@ -2149,7 +2161,7 @@ body {
   position: absolute;
   display: block;
   width: 100%;
-  background-color: inherit; }
+  background-color: #fafafa; }
   .autoSearchList.nav-searchList {
     top: 60px; }
   .autoSearchList.pull-left {
@@ -2265,8 +2277,35 @@ body {
       display: block;
       height: 100%; }
 
+.slide-show-container-h {
+  position: relative;
+  display: block;
+  *zoom: 1; }
+  .slide-show-container-h:before, .slide-show-container-h:after {
+    content: "";
+    display: table; }
+  .slide-show-container-h:after {
+    clear: both; }
+  .slide-show-container-h .slide-item {
+    position: relative;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    float: left;
+    min-height: 1px;
+    *zoom: 1; }
+    .slide-show-container-h .slide-item:before, .slide-show-container-h .slide-item:after {
+      content: "";
+      display: table; }
+    .slide-show-container-h .slide-item:after {
+      clear: both; }
+    .slide-show-container-h .slide-item .img, .slide-show-container-h .slide-item img {
+      width: 100%;
+      height: 100%; }
+
 .news-area {
-  margin-top: 22px; }
+  margin-top: 22px;
+  padding-bottom: 30px; }
 
 .slide-container {
   position: relative;
@@ -2299,14 +2338,14 @@ body {
 .right-new-panel {
   position: relative;
   display: block;
-  padding: 0 0 0 30px; }
+  padding-left: 30px; }
   .right-new-panel .slide-tab-bar {
     position: relative;
     display: block;
     float: left;
     min-height: 1px;
     *zoom: 1;
-    height: 18px; }
+    height: 16px; }
     .right-new-panel .slide-tab-bar:before, .right-new-panel .slide-tab-bar:after {
       content: "";
       display: table; }
@@ -2331,21 +2370,37 @@ body {
       .right-new-panel .slide-tab-bar .slide-item:after {
         clear: both; }
       .right-new-panel .slide-tab-bar .slide-item, .right-new-panel .slide-tab-bar .slide-item span {
-        line-height: 18px; }
-  .right-new-panel .card-h .txt {
-    width: 230px;
-    height: 122px; }
-    .right-new-panel .card-h .txt .title {
-      font-size: 14px;
-      line-height: 18px; }
-    .right-new-panel .card-h .txt .sub {
-      font-size: 12px; }
-  .right-new-panel .card-h .img {
-    width: 149.99px;
-    height: 98px; }
-    .right-new-panel .card-h .img img {
-      display: block;
-      width: 100%;
-      height: 100%; }
+        font-weight: bold;
+        line-height: 16px; }
+  .right-new-panel .card-h {
+    padding: 15px 0; }
+    .right-new-panel .card-h .txt {
+      width: 230px;
+      height: 98px;
+      padding: 0 0 0 15px; }
+      .right-new-panel .card-h .txt .title {
+        font-size: 16px;
+        font-weight: bold;
+        line-height: 16px; }
+      .right-new-panel .card-h .txt .sub {
+        font-size: 14px; }
+    .right-new-panel .card-h .img {
+      width: 149.99px;
+      height: 98px; }
+      .right-new-panel .card-h .img img {
+        display: block;
+        width: 100%;
+        height: 100%; }
+
+#orslideshow {
+  padding: 30px 0 30px 0; }
+
+.slide-show-container-h {
+  display: block; }
+  .slide-show-container-h .slide-item {
+    position: relative;
+    width: 180px;
+    margin-left: 12px;
+    min-height: 1px; }
 
 /*# sourceMappingURL=intranet.css.map */
