--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ html(lang="en")
 body
     include include/nav
     include include/newarea
+    include include/slide-show-or
 script(src='/javascript/jquery-1.12.4.min.js')
 script(src='/javascript/intranet.js')
 script(src='/javascript/pages/index.js')
