--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -2,9 +2,13 @@
    Created by itdwyy on 12/3/2016.
 .wrapper-960.news-area
     .slide-container
-        .slide-images
-            a.img(style='background-image: url(http://n.sinaimg.cn/games/transform/20160506/__70-fxryhhi8460538.png)')
-
+        .img-list
+            .slide-images
+                a.img(style='background-image: url(https://lh4.ggpht.com/-ZO7JAlcPE_QVd_BopPzzInzeynn93ZVtIC5TDKthc99FSN6b3399v6Y6m0=w344-h230-c-rw)')
+            .slide-images
+                a.img(style='background-image: url(https://lh5.ggpht.com/7JV4djzyCsiiSfJfu2UGB87w2J7jyBz4FZrSmFU7a5Av2hDPglgbWYL_wyv1=w344-h230-c-rw)')
+            .slide-images
+                a.img(style='background-image: url(https://lh3.ggpht.com/NfC3BZ5JZE_KpihOcxHl1JkbciETjY7lIJM1zqHhgZ2I38jFZfiR0kxVfXQ=w584-h362-c-rw)')
     .right-new-panel
         .slide-tab-bar.clear
             .slide-item
