--- a/public/stylesheets/components/slideimgs.scss
+++ b/public/stylesheets/components/slideimgs.scss
@@ -1,9 +1,18 @@
 .slide-container {
   display: block;
   @include float-block;
+  overflow: hidden;
+  .img-list {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    @include clearfix;
+  }
   .slide-images {
     position: absolute;
     display: block;
+    float: left;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -13,6 +22,7 @@
     .img {
       display: block;
       height: 100%;
+      background-repeat: no-repeat;
     }
   }
 }
