--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2253,15 +2253,28 @@ body {
   display: block;
   float: left;
   min-height: 1px;
-  *zoom: 1; }
+  *zoom: 1;
+  overflow: hidden; }
   .slide-container:before, .slide-container:after {
     content: "";
     display: table; }
   .slide-container:after {
     clear: both; }
+  .slide-container .img-list {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    *zoom: 1; }
+    .slide-container .img-list:before, .slide-container .img-list:after {
+      content: "";
+      display: table; }
+    .slide-container .img-list:after {
+      clear: both; }
   .slide-container .slide-images {
     position: absolute;
     display: block;
+    float: left;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -2275,7 +2288,8 @@ body {
       clear: both; }
     .slide-container .slide-images .img {
       display: block;
-      height: 100%; }
+      height: 100%;
+      background-repeat: no-repeat; }
 
 .slide-show-container-h {
   position: relative;
