--- a/public/stylesheets/components/mixins/_helper.scss
+++ b/public/stylesheets/components/mixins/_helper.scss
@@ -27,3 +27,9 @@
   @include clearfix;
 }
 
+@mixin linerGradient($direction,$start,$end){
+  background: -webkit-linear-gradient($direction, $start, $end); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient($direction, $start, $end); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient($direction, $start, $end); /* For Firefox 3.6 to 15 */
+  background: linear-gradient($direction, $start, $end); /* Standard syntax (must be last) */
+}
