--- a/public/stylesheets/components/slideimgs.scss
+++ b/public/stylesheets/components/slideimgs.scss
@@ -10,7 +10,7 @@
     @include clearfix;
   }
   .slide-images {
-    position: absolute;
+    position: relative;
     display: block;
     float: left;
     margin: 0;
