--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -3,9 +3,10 @@
 .wrapper-960.news-area
     .slide-container
         #mainNews.img-list
-            a.slide-images
-                .img(style='background-image: url(http://www.clothpaperscissors.com/wp-content/uploads/2860.collage_2D00_ideas_2D00_Susan_2D00_Minier_2D00_120715.jpg)')
-                .title
+            #newsSlide-btns.slide-btn-group
+                .slide-btn.big.left.zindexthetop(style= 'background-image:url(img/btn/ic_keyboard_arrow_left_black_24dp_2x.png)')
+                .slide-btn.big.right.zindexthetop(style= 'background-image:url(img/btn/ic_keyboard_arrow_right_black_24dp_2x.png)')
+            #mainNewsDots.slide-dots
     .right-new-panel
         .slide-tab-bar.clear
             .slide-item
