--- a/public/stylesheets/pages/index.scss
+++ b/public/stylesheets/pages/index.scss
@@ -5,8 +5,8 @@
 }
 .slide-container {
   @include float-block;
-  width: $slide-container-width;
-  height: $slide-container-height;
+  width: $slide-image-width;
+  height: $slide-image-height;
 }
 .right-new-panel {
   @include float-block;
@@ -14,6 +14,19 @@
   height: $right-news-panel-height;
 }
 
+#mainNews.img-list {
+  width: $slide-container-width;
+  .slide-images {
+    width: $slide-image-width;
+    height: $slide-image-height;
+  }
+}
+#newsSlide-btns {
+  width: $slide-image-width;
+  height: 48px;
+  margin-top: -24px;
+  background: transparent;
+}
 .right-new-panel {
   position: relative;
   display: block;
