--- a/public/stylesheets/pages/index.scss
+++ b/public/stylesheets/pages/index.scss
@@ -86,3 +86,9 @@
     min-height: 1px;
   }
 }
+#slick-left {
+  background-image:url(../img/btn/ic_keyboard_arrow_left_black_24dp_2x.png);
+}
+#slick-right {
+  background-image:url(../img/btn/ic_keyboard_arrow_right_black_24dp_2x.png);
+}
