--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -1,12 +1,10 @@
 //
    Created by itdwyy on 12/3/2016.
 .wrapper-960.news-area
-    .slide-container
+    #slick-container.slide-container
         #mainNews.img-list
-            #newsSlide-btns.slide-btn-group
-                .slide-btn.big.left.zindexthetop(style= 'background-image:url(img/btn/ic_keyboard_arrow_left_black_24dp_2x.png)')
-                .slide-btn.big.right.zindexthetop(style= 'background-image:url(img/btn/ic_keyboard_arrow_right_black_24dp_2x.png)')
-            #mainNewsDots.slide-dots
+        #slick-left.slide-btn.big.left.center-v.zindexthetop
+        #slick-right.slide-btn.big.right.center-v.zindexthetop
     .right-new-panel
         .slide-tab-bar.clear
             .slide-item
