--- a/public/stylesheets/components/slideimgs.scss
+++ b/public/stylesheets/components/slideimgs.scss
@@ -28,6 +28,7 @@
     .title {
       position: absolute;
       display: block;
+      padding: $slick-title-padding;
       height: $slick-title-height;
       margin: 0;
       width: 100%;
