--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2336,10 +2336,11 @@ body {
     .slide-container .slide-images .title {
       position: absolute;
       display: block;
-      height: 60px;
+      padding: 15px 5px;
+      height: 80px;
       margin: 0;
       width: 100%;
-      font-size: 28px;
+      font-size: 20px;
       bottom: 0;
       color: #fafafa;
       background-color: #424242;
@@ -2357,8 +2358,8 @@ body {
       display: block;
       left: 0;
       bottom: 0;
-      padding: 15px 0;
-      font-size: 16px; }
+      padding: 15px 5px;
+      font-size: 14px; }
 
 .slide-show-container-h {
   position: relative;
@@ -2478,7 +2479,7 @@ body {
         font-weight: bold;
         line-height: 16px; }
       .right-new-panel .card-h .txt .sub {
-        font-size: 16px; }
+        font-size: 14px; }
     .right-new-panel .card-h .img {
       width: 149.99px;
       height: 98px; }
