--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -94,6 +94,15 @@ $new-image-height: 98px;
 //slide-tab
 $slide-tab-bar-height: 16px;
 $slide-tab-padding: 0 20px;
+//slick dots
+$slick-dots-padding: 10px 20px;
+$dot-margin: 0 2px;
+$dot-btn-width: 0;
+$dot-btn-height: 0;
+$dot-btn-padding: 6px;
+$dot-btn-border-radius: 15px;
+$dot-btn-background-color: color('grey','lighten-5');
+$dot-btn-cur-background-color: color('blue','darken-4');
 //card news
 $card-padding: 15px 0;
 $txt-area-width: 230px;
