--- a/views/tele.jade
+++ b/views/tele.jade
@@ -31,6 +31,6 @@ body
 
 
 
-script(src='/javascript/jquery-1.12.4.min.js')
-script(src='/javascript/scrollIt.min.js')
+script(src='/javascript/includes/jquery-1.12.4.min.js')
+
 script(src='/javascript/pages/telephoneSearch.js')
