--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2012,6 +2012,41 @@ template {
   .slide-btn.center-v {
     top: 50%; }
 
+.slick-dots {
+  position: relative;
+  display: block;
+  margin: 0;
+  padding: 10px 20px;
+  *zoom: 1; }
+  .slick-dots:before, .slick-dots:after {
+    content: "";
+    display: table; }
+  .slick-dots:after {
+    clear: both; }
+  .slick-dots .dot {
+    position: relative;
+    display: block;
+    float: left;
+    margin: 0 2px;
+    width: 0;
+    height: 0;
+    padding: 6px;
+    cursor: pointer;
+    border-radius: 15px;
+    background-color: #fafafa;
+    text-indent: -99999px;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+    /* IE 5-7 */
+    filter: alpha(opacity=90);
+    /* Netscape */
+    -moz-opacity: 0.9;
+    /* Safari 1.x */
+    -khtml-opacity: 0.9;
+    /* Good browsers */
+    opacity: 0.9; }
+    .slick-dots .dot.cur {
+      background-color: #0D47A1; }
+
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
