--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -119,9 +119,10 @@ $or-slide-item-margin-left: floor((960-$or-slide-item-width*5)/5);
 
 
 //button slide-btn
-
 $slide-btn-width-big: 48px;
 $slide-btn-height-big: 48px;
 $slide-btn-width-sm: 24px;
 $slide-btn-height-sm: 24px;
 $slide-btn-bck-color: color('grey','lighten-5');
+
+//side bar
