--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -11,7 +11,7 @@
 @import "components/forms";
 @import "components/card";
 @import "components/slidebar";
-
+@import "components/menu";
 //items
 @import "components/slideimgs";
 
