--- a/views/tele.jade
+++ b/views/tele.jade
@@ -11,45 +11,7 @@ body
         .sidebar
             .nav-list-v.teleList.left
                 .header Headquarter
-                ul.menu-root
-                    li
-                        a.sidebar-link Chairman Office
-                    li
-                        a.sidebar-link CEO Office
-                    li
-                        a.sidebar-link(href='/') General Affairs
-                        ul.menu-sub
-                            li
-                                a.section-link(data-scroll href="#Admin") Admin
-                            li
-                                a.section-link(data-scroll href="#HR") HR
-                            li
-                                a.section-link(data-scroll href="#Information-Technology") Information Technology
-                    li
-                        a.sidebar-link Commercial
-                    li
-                        a.sidebar-link Finance
-                    li
-                        a.sidebar-link Flight Operations
-                    li
-                        a.sidebar-link Engineering & Maintenance
-                    li
-                        a.sidebar-link Customer Services
-        .main-content
-            #Admin.card.list
-                a( href="#").title Admin
-                    ul.list-container
-                        li
-                            .contact-box
-                                .name Lee Sok I.Carrie(Ms)
-
-            #Information-Technology.card.list
-                a( href="#").title Admin
-                    ul.list-container
-                        li
-                            .contact-box
-                                .name Lee Sok I.Carrie(Ms)
-
+                ul#headQuarter.menu-root
 
 
 script(src='/javascript/includes/jquery-1.12.4.min.js')
