--- a/public/stylesheets/components/_menu.scss
+++ b/public/stylesheets/components/_menu.scss
@@ -1,8 +1,14 @@
 .menu-root {
   margin: 0;
   padding: 0;
+  display: block;
+  height: 100%;
   list-style: none;
   a {
     text-decoration: none;
   }
+}
+
+.menu-sub {
+
 }
