--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -125,4 +125,5 @@ $slide-btn-width-sm: 24px;
 $slide-btn-height-sm: 24px;
 $slide-btn-bck-color: color('grey','lighten-5');
 
-//side bar
+//contact cards
+$contact-group-margin: 15px 0 0 10px;
