--- a/views/tele.jade
+++ b/views/tele.jade
@@ -12,7 +12,7 @@ body
             .nav-list-v.teleList.left
                 .header Headquarter
                 ul#headQuarter.menu-root
-
+        #contacts-content
 
 script(src='/javascript/includes/jquery-1.12.4.min.js')
 script(src='/javascript/includes/smooth-scroll.min.js')
