--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -12,8 +12,11 @@
 @import "components/card";
 @import "components/slidebar";
 @import "components/menu";
+@import "components/contacts";
+@import "components/footer";
 //items
 @import "components/slideimgs";
 
 //pages
 @import "pages/index";
+@import "telephone/telephone";
