--- a/views/include/newarea.jade
+++ b/views/include/newarea.jade
@@ -1,6 +1,6 @@
 //
    Created by itdwyy on 12/3/2016.
-.wrapper-960.news-area
+.wrapper-960.news-area.zindexnormal
     #slick-container.slide-container
         #mainNews.img-list
         #slick-left.slide-btn.big.left.center-v.zindexthetop
