--- a/public/stylesheets/telephone/telephone.scss
+++ b/public/stylesheets/telephone/telephone.scss
@@ -2,23 +2,31 @@
 //values
 
 //sidebar
-$sidebar-width: 320px;
-$sidebar-padding: 40px 0 30px 60px;
+$sidebar-width: 300px;
+$sidebar-padding: 20px 0 300px 0;
 
 .sidebar {
-  position: relative;
+  position: fixed;
   display: block;
   float: left;
   height: 100%;
+  top: $nav-height +$nav-second-height;
   width: $sidebar-width;
   padding: $sidebar-padding;
   @include clearfix;
+  overflow-y: scroll;
 }
 .main-content {
   position: fixed;
   display: block;
   float: left;
   margin-left: $sidebar-width;
+}
+
+#headQuarter{
+  margin: 10px 0 0 0;
+  padding: 0;
+  list-style: none;
 }
 
 #Admin,#Information-Technology {
@@ -29,5 +37,10 @@ $sidebar-padding: 40px 0 30px 60px;
   @include float-block;
   @include clearfix;
   min-height: 1px;
+  margin-left: $sidebar-width;
   width: 629px;
+}
+
+#contacts-content {
+  top: $nav-height + $nav-second-height;
 }
